<resources>
    <string name="app_name">Open5e Spells</string>
    <string name="main_title">Open5e - SpellList</string>
    <string name="filter_title">Filters</string>
    <string name="detail_title">Detail</string>

    //TopBar
    <string name="action_filter">Filters</string>
    <string name="action_clear">Clear filters</string>
    <string name="action_sync">Synchronize with API</string>

    //Filters
    <string name="spell_name">Spell name</string>
    <string name="spell_level">Level</string>
    <string name="spell_school">School</string>
    <string name="spell_range">Min.Range</string>
    <string name="spell_class">Class</string>
    <string name="spell_sort">Sort by</string>
    <string name="spell_asc">Ascending</string>
    <string name="spell_desc">Descending</string>
    <string name="spell_ritual">Is Ritual</string>
    <string name="spell_concentration">Needs Concentration</string>
</resources>